App: Fix bottom of pages cut off by music player

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -50,6 +50,7 @@ a:active {
 .logged-out-main {
   padding: 10px;
   padding-top: 20px;
+  padding-bottom: 100px;
 
   @media (max-width: $breakpoint-small) {
     padding-top: $header-height + 20px;
